# RL-locomotion-IsaacSim

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
humanoid_rl_locomotion/: rl_locomotion_isaac.py  walk_rl_network.py
model/: g1_29dof_rev_1_0.usd
model/walking_with_welder/params/: agent.pkl  agent.yaml  deploy.yaml  env.pkl  env.yaml  velocity_env_cfg.py
scripts/: read_joint_orders.py  run_inference.py
